# product-mono

./: .dockerignore  .env.dev  .env.example  .env.prod  .env.template  .gitignore  .gitmodules  2025-09-18-deployment.txt  2025-09-23-history.txt  AGENTS.md  ANALYSIS.md  CONFIG.md  Cargo.toml  Dockerfile  Dockerfile.multi-user  ERC4337_POC_STATUS.md  IDEA.md  PROJECT_INDEX.md  README.md  ROADMAP.md  SESSION_IMPLEMENTATION_COMPLETE.md  SOUL.md  TTFT-Fix.md  chatbot  color.html  config.yaml  debug-frontend.js  debug_contract.sh  deploy.sh  deployment.md  docker-compose-backend.yml  docker-compose-build-prod.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.multi-user.yml  docker-compose.yml  erc_4337_alto_v_0.md  foundry-mcp-mono.code-workspace  foundry.toml  (+21 more)
aomi/: CONTRACTS_SCRAPER_PLAN.md  Cargo.toml  DB_TESTS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  PROBLEM-7-6-9-10.md  SESSION-SUMMARIZATION-TEST-PLAN.md  SSE-TITLE-UPDATE.md  TITLE_IMPLEMENTATION_PLAN.md  history.md  providers.toml
aomi/.cargo/: config.toml
aomi/crates/agent/: Cargo.toml
aomi/crates/agent/src/: agent.rs  completion.rs  lib.rs  types.rs  wallet.rs
aomi/crates/anvil/: Cargo.toml  REFACTOR_PLAN.md  providers.example.toml  providers.test.toml
aomi/crates/anvil/src/: config.rs  instance.rs  lib.rs  lifecycle.rs  main.rs  manager.rs  provider.rs
aomi/crates/apps/aa/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  foundry.toml
aomi/crates/apps/admin/: Cargo.toml
aomi/crates/apps/defi/: Cargo.toml  DEFI.md
aomi/crates/apps/delta/: ARCHITECTURE.md  Cargo.toml  TESTNET.md  domain.yaml  keypair_9.json  maker.json  taker.json
aomi/crates/apps/forge/: Cargo.toml
aomi/crates/apps/l2beat/: Cargo.toml
aomi/crates/apps/polymarket/: Cargo.toml  POLYMARKET.md
aomi/crates/apps/prediction/: Cargo.toml  PREDICTION.md
aomi/crates/apps/script_app/: Cargo.toml
aomi/crates/apps/social/: Cargo.toml  SOCIAL.md
aomi/crates/apps/x/: Cargo.toml  X.md
aomi/crates/backend/: Cargo.toml
aomi/crates/backend/src/: auth.rs  background.rs  history.rs  lib.rs  manager.rs  mapping.rs  namespace.rs  session.rs  tests.rs  types.rs
aomi/crates/backend/tests/: history_tests.rs  session_tests.rs  test_persistence.rs  test_session.rs  test_title_generation.rs  test_tool_call.rs  test_wallet_e2e.rs  test_wallet_events.rs  title_generation_integration_test.rs  tool_call_tests.rs  utils.rs
aomi/crates/baml/: Cargo.toml  baml.Dockerfile  native-baml-plan.md
aomi/crates/baml/baml_client/: README.md  baml_source_map.rs  mod.rs  openapi.yaml  runtime.rs
aomi/crates/baml/baml_client_old_openapi/: Cargo.toml  openapi.yaml
aomi/crates/baml/baml_src/: analyze_abi.baml  analyze_contract.baml  analyze_event.baml  analyze_layout.baml  clients.baml  forge_executor.baml  forge_transactions.baml  generate_conversation_summary.baml  generators.baml  resume.baml  types.baml
aomi/crates/baml/src/: client.rs  lib.rs  model.rs  types.rs
aomi/crates/bot-core/: Cargo.toml
aomi/crates/bot-core/src/: error.rs  handler.rs  lib.rs  policy.rs  session.rs  types.rs  wallet.rs
aomi/crates/chat/: Cargo.toml
aomi/crates/chat/src/: accounts.rs  app.rs  completion.rs  connections.rs  events.rs  lib.rs  prompts.rs  state.rs
aomi/crates/core/src/: app.rs  completion.rs  connections.rs  context_window.rs  events.rs  lib.rs  prompts.rs  state.rs
aomi/crates/data/: proxy.sol
aomi/crates/data/rust-parser/: Cargo.toml
aomi/crates/eval/: Cargo.toml
aomi/crates/eval/src/: assertions.rs  eval_app.rs  eval_state.rs  evaluation.rs  harness.rs  lib.rs  test_entry.rs  test_general.rs  test_scripter.rs
aomi/crates/forge/: Cargo.toml
aomi/crates/forge/src/: app.rs  lib.rs
aomi/crates/l2beat/: Cargo.toml
aomi/crates/l2beat/baml_client/: Cargo.toml  README.md  openapi.yaml
aomi/crates/l2beat/baml_src/: analyze_abi.baml  analyze_event.baml  forge_script.baml  generate_conversation_summary.baml  generators.baml  summarize_conversation.baml  types.baml
aomi/crates/l2beat/src/: adapter.rs  app.rs  etherscan.rs  l2b_tools.rs  lib.rs  runner.rs
aomi/crates/l2beat/target_l2/: .rustc_info.json
aomi/crates/mcp/: Cargo.toml  README.md
aomi/crates/mcp/src/: brave_search.rs  cast.rs  combined_tool.rs  etherscan.rs  lib.rs  main.rs
aomi/crates/polymarket/: Cargo.toml
aomi/crates/polymarket/src/: app.rs  client.rs  lib.rs  polymarket_tools.rs
aomi/crates/rag/: Cargo.toml
aomi/crates/rag/src/: embeddings.rs  lib.rs  vector_store.rs
aomi/crates/scripts/: Cargo.toml
aomi/crates/scripts/src/: lib.rs
aomi/crates/telegram/: Cargo.toml
aomi/crates/telegram/src/: bot.rs  config.rs  handlers.rs  lib.rs  send.rs  session.rs
aomi/crates/tools/: CONTRACT_SEARCH_INTENTS.md  Cargo.toml  ForgeScriptBuilder.md  REQUIRED_CONTRACTS.md  scheduler-convo.md  tmp.txt
aomi/crates/tools-v2/: Cargo.toml
aomi/crates/tools-v2/src/: args.rs  lib.rs  tool_trait.rs  types.rs  wrapper.rs
aomi/crates/tools/src/: abi_encoder.rs  account.rs  brave_search.rs  cast.rs  clients.rs  db_tools.rs  docs.rs  eip712.rs  etherscan.rs  forge_script_builder.rs  lib.rs  multistep_execution.rs  recievers.rs  register.rs  scheduler.rs  streams.rs  test.rs  time.rs  tool_stream.rs  tools.rs  types.rs  wallet.rs  wrapper.rs
aomi/docs/: session-persistence-implementation.md  session-persistence-refactor.md  telegram-architecture.md
aomi/scripts/: migrate.sh  seed.sh
aomi/scripts/migrations/: 001_initial_schema.sql
aomi/specs/: CHAIN-MANAGER.md  CODEX-UPDATE.md  EXECUTOR-V2-PLAN.md  NEW-AOMI-TOOL.md  PHASE-0-2-COMPLETE.md  PHASE-3-6-IMPLEMENTATION-GUIDE.md  PROGRESS.md  SESSION-REDO copy.md
chatbot/: ARCHITECTURE.md  Cargo.toml  README.md  out1.txt
chatbot/crates/agent/: Cargo.toml  README.md  planning.md
chatbot/crates/arch/: Cargo.toml
chatbot/crates/backend/: Cargo.toml
chatbot/crates/mcp/: Cargo.toml  README.md  planning.md
chatbot/crates/mcp-server/: Cargo.toml  README.md
chatbot/crates/rag/: Cargo.toml
chatbot/crates/terminal/: Cargo.toml  design.excalidraw
chatbot/scripts/: init_db.sh
(+1969 files in other folders)
