[package]
name = "forge-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "forge-mcp"
path = "src/bin/main.rs"

[[bin]]
name = "cast-server"
path = "src/bin/cast-server.rs"

[[bin]]
name = "rig-client"
path = "src/bin/rig-client.rs"

[dependencies]
#rmcp
rmcp = { version = "0.1.5", features = [
    "server",
    "client",
    "transport-sse-server",
    "transport-child-process",
    "transport-streamable-http-server",
    "transport-sse",
    "transport-io"
]}
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonc-parser = "0.23"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
rand = { version = "0.8", features = ["std"] }
axum = { version = "0.8", features = ["macros"] }
schemars = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
askama = { version = "0.14"}
toml = "0.8"

#foundry
forge-script = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.1.0" }
foundry-config = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.1.0" }
foundry-cli = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.1.0" }
foundry-common = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.1.0" }
foundry-evm-core = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.1.0" }
foundry-compilers = { version = "0.14.0", default-features = false }

cast = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.1.0" }
chisel = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.1.0" }

#alloy
alloy-primitives = { version = "0.8.22", default-features = false }
alloy-provider = { version = "0.12.1", default-features = false }
alloy-transport-http = { version = "0.12.1", default-features = false }
alloy-serde = { version = "0.12.1", default-features = false }
alloy-rpc-types = { version = "0.12.1", default-features = true }
alloy-sol-types = { version = "1.2.1", default-features = true }


solar-ast = "=0.1.2"
solar-config = "=0.1.2"
solar-parse = { version = "=0.1.2", default-features = false }
solar-sema = { version = "=0.1.2", default-features = false }
solar-macros = { version = "=0.1.2", default-features = false }

semver = "1.0.26"
async-trait = "0.1.88"


[dev-dependencies]
walkdir = "2.3.3"


[patch.crates-io]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "5d92061" }


