[workspace]
members = [
    "crates/backend",
    "crates/agent",
    "crates/mcp",
    "crates/rag",
    "crates/tools",
    "bin/backend",
    "bin/tui",
    "crates/chat",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Collin Brittain"]
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.0.23", features = ["dyn-abi"] }
alloy-ens = "1.0.23"
alloy-provider = "1.0.23"
alloy-transport = "1.0.23"
anyhow = "1.0"
aomi-agent = { path = "crates/agent" }
aomi-backend = { path = "crates/backend" }
aomi-mcp = { path = "crates/mcp" }
aomi-tools = { path = "crates/tools" }
chrono = "0.4"
clap = "4.0"
colored = "2.1.0"
eyre = "0.6.12"
futures = "0.3"
aomi-rag = { path = "crates/rag" }
rig-core = "0.16.0"
rmcp = "0.3.1"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0"
tokio = "1.47.0"
tracing-subscriber = "0.2.25"
tracing = "0.1.41"
async-trait = "0.1"
