[workspace]
members = [
    "crates/backend",
    "crates/l2beat",
    "crates/mcp",
    "crates/rag",
    "crates/tools",
    "bin/backend",
    "bin/tui",
    "crates/chat",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Collin Brittain"]
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.0.41", features = ["dyn-abi"] }
alloy-ens = "1.0.41"
alloy-provider = { version = "1.0.41", default-features = false }
alloy-transport = "1.0.41"
alloy-primitives = { version = "1.0.41", default-features = false, features = ["serde"] }
alloy-transport-http = { version = "1.0.41", default-features = false }
alloy-serde = { version = "1.0.41", default-features = false }
alloy-rpc-types = { version = "1.0.41", default-features = true }
alloy-sol-types = { version = "1.0.41", default-features = true }
alloy-dyn-abi = { version = "1.0.41", default-features = false }

anyhow = "1.0"
aomi-l2beat = { path = "crates/l2beat" }
aomi-backend = { path = "crates/backend" }
aomi-mcp = { path = "crates/mcp" }
aomi-tools = { path = "crates/tools" }
aomi-chat = { path = "crates/chat" }
chrono = "0.4"
clap = "4.0"
cast = { git = "https://github.com/foundry-rs/foundry", package = "cast" }
foundry-common = { git = "https://github.com/foundry-rs/foundry.git" }

colored = "2.1.0"
eyre = "0.6.12"
futures = "0.3"
aomi-rag = { path = "crates/rag" }
rig-core = "0.16.0"
rmcp = "0.3.1"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0"
tokio = "1.47.0"
tracing-subscriber = "0.2.25"
tracing = "0.1.41"
async-trait = "0.1"
sqlx = { version = "0.8.6", features = ["any", "postgres", "sqlite", "runtime-tokio-rustls", "json"] }
reqwest = { version = "0.12", features = ["json"] }

[patch.crates-io]
revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", branch = "main" }
solar = { package = "solar-compiler", git = "https://github.com/paradigmxyz/solar.git", rev = "0bea5f0" }
solar-interface = { package = "solar-interface", git = "https://github.com/paradigmxyz/solar.git", rev = "0bea5f0" }