[workspace]
members = [
    "crates/anvil",
    "crates/backend",
    "crates/baml",
    "crates/mcp",
    "crates/rag",
    "crates/tools",
    "bin/backend",
    "bin/cli",
    "bin/tui",
    "crates/chat",
    "crates/eval",
    "crates/apps/forge",
    "crates/apps/l2beat",
    "crates/scripts",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Collin Brittain"]
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.0.41", features = ["dyn-abi"] }
alloy-ens = "1.0.41"
alloy-provider = { version = "1.0.41", default-features = false }
alloy-transport = "1.0.41"
alloy-primitives = { version = "1.0.41", default-features = false, features = ["serde"] }
alloy-transport-http = { version = "1.0.41", default-features = false }
alloy-rpc-types = { version = "1.0.41", default-features = true }
alloy-sol-types = { version = "1.0.41", default-features = true }

anyhow = "1.0"
aomi-anvil = { path = "crates/anvil" }
aomi-l2beat = { path = "crates/apps/l2beat" }
aomi-backend = { path = "crates/backend" }
aomi-baml = { path = "crates/baml" }
aomi-mcp = { path = "crates/mcp" }
aomi-tools = { path = "crates/tools" }
aomi-core = { path = "crates/chat" }
aomi-forge = { path = "crates/apps/forge" }
aomi-scripts = { path = "crates/scripts" }
# Native BAML FFI runtime
baml = { version = "0.217.0", features = ["dev"] }
chrono = "0.4"
clap = "4.0"

# Foundry dependencies for Cast functionality - using v1.5.0
cast = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.5.0" }
foundry-config = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.5.0" }
foundry-common = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.5.0" }
foundry-compilers = { version = "0.19.10", default-features = false }
foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", tag = "v1.5.0" }

colored = "2.1.0"
eyre = "0.6.12"
futures = "0.3"
aomi-rag = { path = "crates/rag" }
rig-core = "0.16.0"
rmcp = "0.3.1"
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0"
tokio = "1.47.0"
tracing-subscriber = "0.2.25"
tracing = "0.1.41"
async-trait = "0.1"
sqlx = { version = "0.8.6", features = ["any", "postgres", "sqlite", "runtime-tokio-rustls", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-stream = "0.3.6"

[patch.crates-io]
revm-inspectors = { git = "https://github.com/paradigmxyz/revm-inspectors", branch = "main" }
solar-compiler = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-interface = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-ast = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-sema = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-parse = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-config = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
solar-macros = { git = "https://github.com/paradigmxyz/solar.git", rev = "1f28069" }
