[workspace]
members = ["crates/agent", "crates/mcp-server", "crates/rag"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Collin Brittain"]
edition = "2024"

[workspace.dependencies]
alloy = { version = "1.0.23", features = ["dyn-abi"] }
alloy-ens = "1.0.23"
alloy-provider = "1.0.23"
alloy-transport = "1.0.23"
eyre = "0.6.12"
mcp-server = { path = "crates/mcp-server" }
agent = { path = "crates/agent" }
tui = { path = "crates/tui" }
rag = { path = "crates/rag" }
rig-core = "0.16.0"
rmcp = { version = "0.3.1", features = ["macros", "transport-streamable-http-server-session", "transport-worker"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.2.25"
tracing = "0.1.41"

[package]
name = "foameow"
version = "0.1.0"
authors = ["Collin Brittain"]
edition = "2024"

[dependencies]
agent = { path = "crates/agent" }
ratatui = { version = "0.28", features = ["crossterm"] }
crossterm = "0.28"
tokio = { version = "1.47.0", features = ["full", "rt-multi-thread", "macros"] }
colored = "2.1.0"
chrono = "0.4"
textwrap = "0.16"
unicode-width = "0.1"
anyhow = "1.0"
tracing-subscriber = "0.2.25"
eyre = "0.6.12"
rig-core = { version = "0.16.0", features = ["rmcp"] }
rmcp = { version = "0.3.1", features = ["macros", "transport-streamable-http-server-session", "transport-worker", "client", "reqwest", "transport-streamable-http-server", "transport-streamable-http-client"] }
alloy = { version = "1.0.23", features = ["dyn-abi"] }
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "foameow"
path = "bin/tui/src/main.rs"
