[package]
name = "aomi-anvil"
version = "0.1.0"
edition = "2021"
description = "Anvil process management and ProviderManager for multi-chain fork orchestration"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "sync", "time", "io-util"] }
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
once_cell = "1.19"
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
uuid = { version = "1.0", features = ["v4", "serde"] }
toml = "0.8"
regex = "1.10"

# Alloy dependencies for RootProvider (use workspace versions)
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-transport-http.workspace = true
alloy-rpc-types.workspace = true

# Network type from alloy
alloy = { workspace = true, features = ["network"] }

# Foundry dependencies for Backend
foundry-evm = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
