[package]
name = "aomi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
aomi-chat.workspace = true
aomi-tools.workspace = true
aomi-l2beat.workspace = true
aomi-forge.workspace = true
async-trait.workspace = true
baml-client.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
dashmap = "6.1.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures.workspace = true

[[test]]
name = "test_session"
path = "tests/test_session.rs"

[[test]]
name = "history_tests"
path = "tests/history_tests.rs"

[[test]]
name = "test_tool_call"
path = "tests/test_tool_call.rs"

[[test]]
name = "test_title_generation"
path = "tests/test_title_generation.rs"

[[test]]
name = "test_wallet_events"
path = "tests/test_wallet_events.rs"
