[package]
name = "aomi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
aomi-core.workspace = true
aomi-tools.workspace = true
aomi-l2beat.workspace = true
aomi-forge.workspace = true
aomi-admin.workspace = true
aomi-polymarket.workspace = true
aomi-x.workspace = true
async-trait.workspace = true
aomi-baml.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
dashmap = "6.1.0"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures.workspace = true

[dev-dependencies]
eyre.workspace = true

[[test]]
name = "test_session"
path = "tests/test_session.rs"

[[test]]
name = "test_persistence"
path = "tests/test_persistence.rs"

[[test]]
name = "test_tool_call"
path = "tests/test_tool_call.rs"

[[test]]
name = "test_title_generation"
path = "tests/test_title_generation.rs"

[[test]]
name = "test_wallet_events"
path = "tests/test_wallet_events.rs"
