[package]
name = "aomi-baml"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
# Native BAML FFI runtime (replaces HTTP-based baml-client)
baml.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
