[package]
name = "eval"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aomi-backend.workspace = true
aomi-chat.workspace = true
aomi-tools.workspace = true
anyhow.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
eyre.workspace = true
rig-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
