[package]
name = "eval"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aomi-backend.workspace = true
aomi-chat.workspace = true
aomi-forge.workspace = true
aomi-tools = { workspace = true, features = ["eval-test"] }
anyhow.workspace = true
futures.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
eyre.workspace = true
rig-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
dashmap = "6.1.0"
rayon = "1.11.0"
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
colored.workspace = true
alloy.workspace = true
alloy-network-primitives = "1.1.0"
alloy-provider.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true
reqwest.workspace = true
hex = "0.4"


[features]
eval-test = []
