[package]
name = "aomi-l2beat"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
aomi-backend = { path = "../backend" }
aomi-mcp = { path = "../mcp" }
aomi-tools = { path = "../tools" }
baml-client = { path = "./baml_client" }
async-stream = "0.3.6"
aomi-chat = { path = "../chat" }
colored.workspace = true
eyre.workspace = true
futures.workspace = true
aomi-rag.workspace = true
rig-core = { workspace = true, features = ["rmcp"] }
rig-derive = "0.1.4"
rmcp = { workspace = true, features = ["client", "reqwest", "transport-streamable-http-server", "transport-streamable-http-client"] }
rustyline = "16.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
hex = "0.4.3"
chrono.workspace = true

cast.workspace = true
alloy-ens.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types.workspace = true
foundry-common.workspace = true
jsonc-parser = "0.27.0"
async-trait.workspace = true
reqwest.workspace = true
anyhow.workspace = true
walkdir = "2.5.0"
