[package]
name = "aomi-scripts"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
aomi-tools = { path = "../tools" }
aomi-baml.workspace = true
aomi-anvil.workspace = true
alloy.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-transport.workspace = true
anyhow.workspace = true
async-trait.workspace = true
cast.workspace = true
chrono.workspace = true
dashmap = "6.1.0"
eyre.workspace = true
foundry-common.workspace = true
foundry-compilers = { workspace = true, features = ["project-util", "full"] }
foundry-evm.workspace = true
foundry-evm-core.workspace = true
foundry-config.workspace = true
futures.workspace = true
hex = "0.4.3"
once_cell = "1.21.3"
rig-core = { workspace = true, features = ["rmcp"] }
rig-derive = "0.1.4"
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
aomi-forge = { path = "../apps/forge" }
