[package]
name = "aomi-telegram"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
aomi-backend = { path = "../backend" }
dptree = "0.3"
