[package]
name = "aomi-tools-v2"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eyre.workspace = true
futures.workspace = true
rig-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
