[package]
name = "aomi-tools-v2"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
eyre.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
