[package]
name = "aomi-tools"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
alloy-ens.workspace = true
alloy-provider.workspace = true
cast.workspace = true
alloy.workspace = true
aomi-rag.workspace = true
async-trait.workspace = true
chrono.workspace = true
eyre.workspace = true
futures.workspace = true
hex = "0.4.3"
reqwest.workspace = true
rig-core = { workspace = true, features = ["rmcp"] }
rig-derive = "0.1.4"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
tracing.workspace = true
once_cell = "1.21.3"
async-stream.workspace = true

[features]
default = []
eval-test = []
