[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
async-stream = "0.3.6"
colored = "2.1.0"
eyre.workspace = true
futures = "0.3"
rag.workspace = true
rig-core = { workspace = true, features = ["rmcp"] }
rig-derive = "0.1.4"
rmcp = { workspace = true, features = ["client", "reqwest", "transport-streamable-http-server", "transport-streamable-http-client"] }
rustyline = "16.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
hex = "0.4.3"
