[package]
name = "aomi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
aomi-agent.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
dashmap = "6.1.0"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
