[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
cast = { git = "https://github.com/foundry-rs/foundry", package = "cast" }
alloy.workspace = true
alloy-ens.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
eyre.workspace = true
hyper-util = { version = "0.1.16", features = ["server", "tokio", "service"] }
rmcp = { workspace = true, features = ["macros", "client", "reqwest", "transport-streamable-http-server", "transport-streamable-http-client"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json", "gzip"] }

[[bin]]
name = "foameow-mcp-server"
path = "src/main.rs"

[[bin]]
name = "mcp-smoke-client"
path = "src/bin/smoke_client.rs"
