[package]
name = "aomi-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre.workspace = true
hyper-util = { version = "0.1.16", features = ["server", "tokio", "service"] }
rmcp = { workspace = true, features = ["macros", "transport-streamable-http-server", "transport-worker"] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["json", "gzip"] }
regex.workspace = true

[[bin]]
name = "aomi-mcp-server"
path = "src/main.rs"
