[package]
name = "rag"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rig-fastembed = "=0.2.4"
rig-core = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
