[package]
name = "aomi-defi"
version = "0.1.0"
edition = "2021"
description = "DeFi Master namespace for Aomi - multi-chain DeFi data aggregation"

[dependencies]
aomi-core.workspace = true
aomi-tools.workspace = true
async-trait.workspace = true
eyre.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
